# lorandi_assignment_2

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  package.xml
config/: apriltag_params.yaml  gripper_controller.yaml
launch/: lorandi_assignment_2.launch.py  lorandi_nodes.launch.py  sim_norviz.launch.py
scripts/: color_detector_node.py  cube_swapper_node.py  spawn_gripper_controller.py  tag_detector_node.py
